--- a/src/app/sales-list/sales-list.html
+++ b/src/app/sales-list/sales-list.html
@@ -15,6 +15,7 @@
                 Filters
 
             </h4>
+            <!--<pre>{{salesList |json}}</pre>-->
 
             <div class="col-xs-12">
                 <div class="col-xs-3  ">
@@ -123,10 +124,16 @@
                                      star-radius="10" rating-stars="{{sales.ratings}}" sel-color="gold"
                                      back-color="white"></div>
 
-
+                               <span ng-if="sales.status == 'SALE_BLOCKED'">
+                                <button type="button" id="notify-warning" class="btn btn-warning"
+                                        ng-click="unBlockSaleConfirm(sales)">UnBlock
+                                </button>
+                               </span>
+                               <span ng-if="sales.status != 'SALE_BLOCKED'">
                                 <button type="button" id="notify-warning" class="btn btn-warning"
                                         ng-click="blockSaleConfirm(sales)">Block
                                 </button>
+                               </span>
                             </div>
                         </div>
                     </div>
@@ -258,7 +265,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Please explain reason for Delete</h4>
+                <h4 class="modal-title">Please explain reason for Block</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
@@ -268,6 +275,30 @@
             <div class="modal-footer text-left">
                 <button type="button" class="btn width-150 btn-primary" ng-click="confirmDelete(reasonToBlock)"> Confirm</button>
                 <button type="button" class="btn width-150 btn-default" ng-click="closeButton()"> close</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Compose Modal -->
+<!-- Compose Modal -->
+<div class="modal fade modal-size-large" id="reasonForUnBlock" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Please explain reason for Un Block</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <textarea type="text" class="form-control" placeholder="Subject" name="message" ng-model="reasonToUnBlock"/></textarea>
+                </div>
+            </div>
+            <div class="modal-footer text-left">
+                <button type="button" class="btn width-150 btn-primary" ng-click="confirmUnBlock(reasonToUnBlock)"> Confirm</button>
+                <button type="button" class="btn width-150 btn-default" ng-click="closeUnBlockButton()"> close</button>
 
             </div>
         </div>
