--- a/src/app/sales-list/sales-list.html
+++ b/src/app/sales-list/sales-list.html
@@ -186,7 +186,7 @@
                             <td class="text-nowrap">
                                 Sale Image
                             </td>
-                            <td><a href="javascript: void(0);" class="cui-ecommerce--dashboard--list--img"><img
+                            <td><a href="javascript: void(0);" class="messaging-img"><img
                                     ng-src="{{modalDetials.sale_image.imageURL}}"/></a></td>
                         </tr>
                         <tr>
@@ -238,16 +238,114 @@
                             <td class="text-nowrap">
                                 Sale Items
                             </td>
-                            <td><span ng-repeat="items in modalDetials.sale_items">{{items.id}} <span
-                                    ng-repeat="variants in items.variants">{{variants}}</span> </span></td>
+                            <td>
+                                <!--<span ng-repeat="items in modalDetials.sale_items"><pre>{{items | json}}</pre> <span
+                                    ng-repeat="variants in items.variants"><pre>{{variants | json}}</pre></span> </span>-->
+                                    
+                                    <table class="table table-inverse" ng-repeat="items in modalDetials.sale_items">
+                                     
+                                    <tbody>
+                                    <tr>
+                                        <td class="text-nowrap">Product Title </td>
+                                        <td> {{items.title}}</td>
+                                     </tr>
+                                    <tr>
+                                        <td class="text-nowrap">Product Image</td>
+                                        <td>  <img  ng-src="{{items.images[0].imageURL}}" class="messaging-img"/></td>
+                                     </tr>
+                                     <tr>
+                                        <td class="text-nowrap">Taxes</td>
+                                        <td>   <table class="table table-inverse">
+                                            <thead>
+                                                <tr>
+                                                    <th>Tax</th>
+                                                    <th>Discount %</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr ng-repeat="tax in items.taxes ">
+                                                <td>{{tax.sale}} </td>
+                                                <td> {{tax.discount}}</td>
+                                            </tr>
+                                            </tbody>
+                                            
+                                            </table></td>
+                                     </tr>
+                                     <tr>
+                                        <td class="text-nowrap">Product Price </td>
+                                        <td> {{items.price+items.tax_price | currency:currency }} &nbsp (Price:{{items.price | currency:currency }} ,Tax:{{items.tax_price | currency:currency }})</td>
+                                     </tr>
+                                     <tr>
+                                        <td class="text-nowrap">Variants</td>
+                                        <td>   
+                                            <table class="table table-inverse">
+                                                <thead>
+                                                <tr>
+                                                    <th>Product</th>
+                                                    <th ng-repeat="variator in items.variator">{{variator.name}}</th>
+                                                    
+                                                    <th>Quantity</th>
+                                                    <th>Available</th>
+
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr ng-repeat="variantsData in items.variants">
+
+                                                    <td><span ng-repeat="imageDetail in variantsData.images"> <img
+                                                            ng-src="{{imageDetail.imageURL}}" class="messaging-img"/>  </span></td>
+                                                    <td ng-repeat="variators in items.variator">
+                                                        {{variantsData[variators.name]}}
+                                                    </td>
+                                                    <td>{{variantsData.quantity}}</td>
+                                                    <td>{{variantsData.isActive}}</td>
+
+                                                </tr>
+                                                </tbody>
+                                            </table>
+
+
+
+
+                                        </td>
+                                        
+                                     </tr>
+                                     <tr>
+                                        <td class="text-nowrap">
+                                            Description
+                                        </td>
+                                        <td ng-bind-html ="convertHtml(items.description)"> </td>
+                                    </tr>
+                                      <tr>
+                                        <td class="text-nowrap">Ratings </td>
+                                        <td> {{items.review.avg_rating}} / 5</td>
+                                     </tr>
+                                    </tbody>
+                                </table>
+                                </td>
                         </tr>
 
                         <tr>
                             <td class="text-nowrap">
                                 Sale Discounts
                             </td>
-                            <td><span ng-repeat="discounts in modalDetials.sale_discounts">sale Quantity  :{{discounts.sale_qty}} ,Sale Discount :{{discounts.sale_discount_percentage}} </span><br>
-                            </td>
+                            <td>
+                            
+                            <table class="table table-inverse">
+                                    <thead>
+                                        <tr>
+                                            <th>Sale Quantity</th>
+                                            <th>Sale Discount %</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="discounts in modalDetials.sale_discounts | orderBy : 'sale_qty' ">
+                                            <td>{{discounts.sale_qty}}</td>
+                                            <td>  {{discounts.sale_discount_percentage}} </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                </td>
                         </tr>
 
 
