--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -31,7 +31,7 @@
                     Login Form
                 </h3>
                 <br />
-                <form id="form-validation" name="form-validation"  ng-submit="goToDashboard(user);" novalidate>
+                <form id="form-validation" name="form-validation"  ng-submit="authenticationCheck(user);" novalidate>
                     <div class="form-group">
                         <input id="validation-email"
                                class="form-control"
