--- a/src/app/products-list/products-list.html
+++ b/src/app/products-list/products-list.html
@@ -170,7 +170,7 @@
                             <td class="text-nowrap">
                                 Category
                             </td>
-                            <td>{{modalDetials.category}}</td>
+                            <td>{{modalDetials.category.name}}</td>
                         </tr>
                         <tr>
                             <td class="text-nowrap">
