--- a/src/app/top-menu/_top-menu.html
+++ b/src/app/top-menu/_top-menu.html
@@ -9,7 +9,7 @@
             <div class="dropdown dropdown-avatar">
                 <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     <span class="avatar" href="javascript:void(0);">
-                        <img src="../assets/common/img/temp/avatars/1.jpg" alt="Alternative text to the image">
+                        <img ng-src="{{userImg}}" alt="Alternative text to the image">
                     </span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
