added payment gateway selection  module

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -195,6 +195,12 @@
                     <span class="menu-top-hidden">Referrals</span>
                 </a>
             </li>
+            <li>
+                <a class="left-menu-link" href="#!/payment-gateway">
+                   <i class="left-menu-link-icon icmn-credit-card2"><!-- --></i>
+                    <span class="menu-top-hidden">Payment Gateway</span>
+                </a>
+            </li>
 
 
 
