--- a/src/app/index.html
+++ b/src/app/index.html
@@ -201,6 +201,13 @@
                     <span class="menu-top-hidden">Payment Gateway</span>
                 </a>
             </li>
+             <li>
+                <a class="left-menu-link" href="#!/audit-logs">
+                   <i class="left-menu-link-icon icmn-credit-card2"><!-- --></i>
+                    <span class="menu-top-hidden">Audit Logs</span>
+                </a>
+            </li>
+
 
 
 
