--- a/src/app/payment-gateway/payment-gateway.html
+++ b/src/app/payment-gateway/payment-gateway.html
@@ -4,7 +4,7 @@
     <section class="panel panel-with-borders">
         <div class="panel-heading">
             <h2>
-                Payment Gateways List {{payment}}
+                Payment Gateways List  
             </h2>
         </div>
 
@@ -18,7 +18,7 @@
 
                                     <th width="10%">Select </th>
                                     <th width="70%">Name</th>
-                                    <th width="20%">Status {{payment}}</th>
+                                    <th width="20%">Status  </th>
 
                                 </tr>
                             </thead>
