account transfer module code update

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -196,6 +196,12 @@
                 </a>
             </li>
             <li>
+                <a class="left-menu-link" href="#!/account-transfer">
+                   <i class="left-menu-link-icon icmn-cash4"><!-- --></i>
+                    <span class="menu-top-hidden">Account Transfer</span>
+                </a>
+            </li>
+            <li>
                 <a class="left-menu-link" href="#!/payment-gateway">
                    <i class="left-menu-link-icon icmn-credit-card2"><!-- --></i>
                     <span class="menu-top-hidden">Payment Gateway</span>
@@ -203,7 +209,7 @@
             </li>
              <li>
                 <a class="left-menu-link" href="#!/audit-logs">
-                   <i class="left-menu-link-icon icmn-credit-card2"><!-- --></i>
+                   <i class="left-menu-link-icon icmn-clipboard3"><!-- --></i>
                     <span class="menu-top-hidden">Audit Logs</span>
                 </a>
             </li>
