export to pdf all products of vendor code update

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -87,9 +87,15 @@
     <!--<script src="assets/vendors/angular-route/angular-route.min.js"></script>-->
     <script src="assets/vendors/angular-ui-router/angular-ui-router.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+
     <script src="assets/vendors/summernote/dist/angular-summernote.js"></script>
     <script src="assets/common/js/version_angular/app.js"></script>
     <script src="assets/app.min.js"></script>
+    <!--PDF canvas export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
+    <script src="assets/vendors/vfsfonts/vfs_fonts.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 
     <!-- Angular Version Controllers -->
     <!--<script src="pages/register.ctrl.js"></script>
