--- a/src/app/products-list/products-list.html
+++ b/src/app/products-list/products-list.html
@@ -1,4 +1,4 @@
-<div class="page-content-inner">
+<div class="page-content-inner" id="exportthis">
 
     <!-- Ecommerce Products Catalog -->
     <section class="panel panel-with-borders">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-3">
                     <div class="form-group row">
                         <div class="col-md-3">
                             <label class="form-control-label" for="l0">Vendors </label>
@@ -60,14 +60,22 @@
 
                 </div>
 
-                <div class="col-xs-2"><a href="javascript: void(0);" class="pull-right btn btn-primary"
-                                         ng-click="resetFilters()">Reset</a></div>
+                <div class="col-xs-3">
+                    <div class="col-md-6">
+                           <button class="pull-right btn btn-primary"
+                                         ng-click="resetFilters()">Reset</button>
+                        </div>
+                        <div class="col-md-6">
+                          <button   class="pull-right btn btn-primary"
+                                         ng-click="search.vendor !='' && export(search.vendor)">export</button>
+                        </div>
+                  </div>
             </div>
         </div>
 
-        <div class="panel-body">
+        <div class="panel-body" >
 
-            <div class="cui-ecommerce--catalog">
+            <div class="cui-ecommerce--catalog" >
 
                 <div class="row">
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12"
