--- a/src/app/audit-logs/audit-logs.html
+++ b/src/app/audit-logs/audit-logs.html
@@ -60,19 +60,20 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-
-                            <th width="20%">User</th>
+                            <th width="10%">S.NO</th>
+                            <th width="15%">User</th>
                             <th width="20%">IPaddress</th>
                             <th width="30%">URL</th>
                             <!--<th width="10%">Method</th>-->
-                            <th width="20%">Created at</th>
+                            <th width="15%">Created at</th>
 
                         </tr>
                     </thead>
 
                     <tbody>
 
-                        <tr dir-paginate="log in auditLogsList  | itemsPerPage:20 |  orderBy:createdAt:asc">
+                        <tr dir-paginate="log in auditLogsList   |  orderBy:'createdAt':ascending | itemsPerPage:itemsPerPage" current-page="currentPage">
+                            <td>{{itemsPerPage *(currentPage-1)+$index+1}} </td>
                             <td>
                                 <span ng-if="log.user == 'ANONYMOUS'">{{log.user}} </span>
                                 <span ng-if="log.user != 'ANONYMOUS'">{{log.user.firstName}} {{log.user.lastName}}</span></td>
