--- a/src/app/index.html
+++ b/src/app/index.html
@@ -202,6 +202,12 @@
                 </a>
             </li>
             <li>
+                <a class="left-menu-link" href="#!/referral-settings">
+                   <i class="left-menu-link-icon icmn-cog util-spin-delayed-pseudo"><!-- --></i>
+                    <span class="menu-top-hidden">Referrals Settings</span>
+                </a>
+            </li>
+            <li>
                 <a class="left-menu-link" href="#!/account-transfer">
                    <i class="left-menu-link-icon icmn-cash4"><!-- --></i>
                     <span class="menu-top-hidden">Account Transfer</span>
