--- a/src/app/products-list/products-list.html
+++ b/src/app/products-list/products-list.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="col-md-6">
                           <button   class="pull-right btn btn-primary"
-                                         ng-click="search.vendor !='' && export(search.vendor)">export</button>
+                                         ng-click="export(search.vendor)">export</button>
                         </div>
                   </div>
             </div>
