--- a/src/app/users/users-list.html
+++ b/src/app/users/users-list.html
@@ -34,7 +34,7 @@
                                         <option value=""  selected >All</option>
                                         <option value="VENDOR">Vendor</option>
                                         <option value="BUYER">Buyer</option>
-                                        
+                                        <option value="DISTRIBUTOR">Distributor</option>
                                     </select>
                                 </div>
                             </div>
