--- a/src/app/index.html
+++ b/src/app/index.html
@@ -201,11 +201,26 @@
                     <span class="menu-top-hidden">Referrals</span>
                 </a>
             </li>
-            <li>
-                <a class="left-menu-link" href="#!/referral-settings">
-                   <i class="left-menu-link-icon icmn-cog util-spin-delayed-pseudo"><!-- --></i>
-                    <span class="menu-top-hidden">Referrals Settings</span>
+           
+            <li class="left-menu-list-submenu">
+                <a class="left-menu-link" href="javascript: void(0);">
+                    <i class="left-menu-link-icon icmn-cog util-spin-delayed-pseudo"> </i>
+                   
+                   <span class="menu-top-hidden">Settings</span>
                 </a>
+                <ul class="left-menu-list list-unstyled">
+                     <li>
+                        <a class="left-menu-link" href="#!/referral-settings">
+                            Referrals
+                        </a>
+                    </li>
+                     <li>
+                        <a class="left-menu-link" href="#!/app-settings">
+                           App Settings
+                        </a>
+                    </li>
+
+                </ul>
             </li>
             <li>
                 <a class="left-menu-link" href="#!/account-transfer">
