orders, paymenttransactions,category,subcategory code update

--- a/src/app/dashboards/dashboard.html
+++ b/src/app/dashboards/dashboard.html
@@ -715,9 +715,9 @@
 
         // AREA
         var chart1 = new Chartist.Line(".chart-area-1", {
-            labels: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
+            labels: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat','Sun'],
             series: [
-                [2, 4, 7, 25, 5, 28, 31]
+                [2, 4, 7, 25, 5, 28, 31,100]
             ]
         }, {
             fullWidth: !0,
