--- a/src/app/index.html
+++ b/src/app/index.html
@@ -159,6 +159,25 @@
                 </ul>
             </li>
             <li class="left-menu-list-separator"><!-- --></li>
+             <li class="left-menu-list-submenu">
+                <a class="left-menu-link" href="javascript: void(0);">
+                    <i class="left-menu-link-icon icmn-cart5"> </i>
+                   Master Data
+                </a>
+                <ul class="left-menu-list list-unstyled">
+                     <li>
+                        <a class="left-menu-link" href="#!/category">
+                            Category
+                        </a>
+                    </li>
+                     <li>
+                        <a class="left-menu-link" href="#!/sub-category">
+                            Sub Category
+                        </a>
+                    </li>
+
+                </ul>
+            </li>
 
             <li class="left-menu-list-submenu">
                 <a class="left-menu-link" href="javascript: void(0);">
@@ -174,6 +193,11 @@
                      <li>
                         <a class="left-menu-link" href="#!/products-list">
                             Products List
+                        </a>
+                    </li>
+                    <li>
+                        <a class="left-menu-link" href="#!/orders">
+                            Orders List
                         </a>
                     </li>
 
@@ -232,6 +256,12 @@
                 <a class="left-menu-link" href="#!/payment-gateway">
                    <i class="left-menu-link-icon icmn-credit-card2"><!-- --></i>
                     <span class="menu-top-hidden">Payment Gateway</span>
+                </a>
+            </li>
+            <li>
+                <a class="left-menu-link" href="#!/payment-transactions">
+                   <i class="left-menu-link-icon icmn-credit-card2"><!-- --></i>
+                    <span class="menu-top-hidden">Payment Transactions</span>
                 </a>
             </li>
              <li>
