--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -14,7 +14,7 @@
             </h4>
             <div class="col-xs-12">
 
-              
+
 
                 <div class="col-xs-3">
                     <div class="form-group row">
@@ -27,8 +27,8 @@
                                         <option value="PAYMENT_CONFIRMED">Payment Confirmed</option>
                                         <option value="PAYMENT_FAILED">Payment Failed</option>
                                         <option value="PAYMENT_PENDING">Payment Pending</option>
-                                        
-                                      
+
+
                                     </select>
                         </div>
                     </div>
@@ -68,10 +68,10 @@
                         <tr dir-paginate="users in userList  | itemsPerPage:itemsPerPage | orderBy:users.createdAt:asc" current-page="currentPage"
                             total-items="totalCount">
                             <!--<td >{{itemsPerPage *(currentPage-1)+$index+1}}</td>-->
-                            <td colspan="6">
+                            <!-- <td colspan="6">
                                 <table class="table  ">
                                     <tbody>
-                                        <tr>
+                                        <tr> -->
                                             <td>{{itemsPerPage *(currentPage-1)+$index+1}}</td>
                                             <td>{{users.id}} </td>
                                             <td>{{users.order_total | currency:currency}}</td>
@@ -97,10 +97,10 @@
                                                         </button></td>
                                         </tr>
 
-                                    </tbody>
+                                    <!-- </tbody>
                                 </table>
                             </td>
-                        </tr>
+                        </tr> -->
                         <tr ng-show="!(userList ).length">
                             <td colspan="6">
                                 <center>No data found</center>
@@ -156,7 +156,7 @@
                                                                     ng-if="y.trackListNew.ORDER_CANCELED[0].status == 'ORDER_CANCELED'">Order Cancelled</span>
                                                                     </span> {{y.trackList[1].status_updated_at | date:'dd/MM/yyyy'}}</a></li>
                                                     <li role="tab" class=" done" ng-class="y.trackListNew.ORDER_SHIPPED[0].status_updated_at ? '' : 'disabled'"><a><span class="current-info audible">current step: </span><span class="number">3.</span> <i class="icmn-circles cui-wizard--steps--icon"></i> <span class="cui-wizard--steps--title">Tracking <br><span ng-show="y.trackListNew.ORDER_SHIPPED[0].status_updated_at">
-                                                      # {{y.trackListNew.ORDER_SHIPPED[0].tracking_details.trackingId}}<br>   
+                                                      # {{y.trackListNew.ORDER_SHIPPED[0].tracking_details.trackingId}}<br>
                                                             {{y.trackListNew.ORDER_SHIPPED[0].status_updated_at |
                                                             date:'dd/MM/yyyy'}}</span></span></a></li>
                                                     <li role="tab"   ng-click=" (y.trackListNew.ORDER_SHIPPED[0].status == 'ORDER_SHIPPED') && (y.trackListNew.ORDER_DELIVERED[0].status != 'ORDER_DELIVERED') && confirmDeliveryStatus(y.id,saleData.sales.order_item_id, saleData.id, saleData.sales.id)" class="last" ng-class="y.trackListNew.ORDER_DELIVERED[0].status == 'ORDER_DELIVERED' ? ' ' : 'disabled'" ng-hide="DeliveredDa[$index]"><a><span class="current-info audible">current step: </span><span class="number">3.</span> <i class="icmn-circles cui-wizard--steps--icon"></i> <span class="cui-wizard--steps--title"> </span>
