--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -7,36 +7,24 @@
                 Orders List
             </h2>
         </div>
-        <!--<div class="panel-body">
-            <h4>
-                Filters
-
-            </h4>
+        <div class="panel-body">
+            <h4>  Filters  </h4>
             <div class="col-xs-12">
-
-
-
-                <div class="col-xs-3">
+               <div class="col-xs-5">
                     <div class="form-group row">
                         <div class="col-md-3">
-                            <label class="form-control-label" for="l0">Status </label>
+                            <label class="form-control-label" for="l0">Order ID </label>
                         </div>
                         <div class="col-md-9">
-                            <select class="form-control" name="searchstatus" ng-model="search.status">
-                                        <option value="" selected >All</option>
-                                        <option value="PAYMENT_CONFIRMED">Payment Confirmed</option>
-                                        <option value="PAYMENT_FAILED">Payment Failed</option>
-                                        <option value="PAYMENT_PENDING">Payment Pending</option>
-
-
-                                    </select>
+                            <input type="text" class="form-control" name="searchName" ng-model="search.name">
+                                        
                         </div>
                     </div>
 
                 </div>
                 <div class="col-xs-2"><a href="javascript: void(0);" class="pull-right btn btn-primary" ng-click="applyFilters(search)">Apply</a></div>
                 <div class="col-xs-2"><a href="javascript: void(0);" class="pull-right btn btn-primary" ng-click="resetFilters()">Reset</a></div>
-                <div class="col-xs-4 ">
+                <div class="col-xs-3 ">
                     <div class="form-group row">
                         <div class="col-md-3">
                             <label class="form-control-label" for="l0">Total: </label>
@@ -47,22 +35,12 @@
                     </div>
                 </div>
             </div>
-        </div>-->
+        </div>
         <div class="panel-body">
 
             <div class=" table-responsive table   margin-bottom-50">
                 <table class="table  ">
-                    <thead>
-                        <tr>
-                            <th>S.No</th>
-                            <th>OrderID</th>
-                            <th>Amount</th>
-                            <th>Status</th>
-                            <th>Created Date</th>
-                            <th>Bank Details</th>
-
-                        </tr>
-                    </thead>
+                    
 
                     <tbody>
                         <tr dir-paginate="users in userList  | itemsPerPage:itemsPerPage | orderBy:users.createdAt:asc" current-page="currentPage"
@@ -70,6 +48,17 @@
                             <!--<td >{{itemsPerPage *(currentPage-1)+$index+1}}</td>-->
                             <td colspan="6">
                                 <table class="table  ">
+                                     <thead ng-if="$index == 0">
+                                        <tr>
+                                            <th>S.No</th>
+                                            <th>OrderID</th>
+                                            <th>Amount</th>
+                                            <th>Status</th>
+                                            <th>Created Date</th>
+                                            <th> Details</th>
+
+                                        </tr>
+                                    </thead>
                                     <tbody>
                                         <tr>
                                             <td>{{itemsPerPage *(currentPage-1)+$index+1}}</td>
