sale list changes

--- a/src/assets/common/css/helpers/_base.responsive.scss
+++ b/src/assets/common/css/helpers/_base.responsive.scss
@@ -84,6 +84,7 @@
             }
         }
     }
+
 }
 
 
@@ -162,7 +163,14 @@
     }
 }
 
-
+@media (max-width: 479px) {
+.btn-control{
+  width: 40%;
+    a{
+      float: none !important;
+    }
+  }
+}
 /*
  * NEW PADDINGS & MARGINS
  */
